Use itemsRetrievedIncremental() when fetching missing bodies

REVIEW: 109914
BUG: 316521